Fix project manager item issue when name is too long

--- a/src/renderer/ui/components/projectManager/projectManagerList/projectManagerListItem.module.scss
+++ b/src/renderer/ui/components/projectManager/projectManagerList/projectManagerListItem.module.scss
@@ -4,26 +4,16 @@
  */
 
 .project-list-item {
-  position: relative;
-}
-.project-list-item-button {
-  display: block;
+  display: flex;
   width: 100%;
-  text-align: left;
   outline-offset: -2px;
   background-color: #F8F8F8;
   border: 1px solid transparent;
-  padding: 0 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
   box-sizing: border-box;
-  white-space: nowrap;
-  font-size: 16px;
-  height: 36px;
-  line-height: 36px;
+  align-items: center;
   cursor: pointer;
   &:hover {
-    background-color: #EFEFEF;
+    background-color: #F2F2F2;
   }
   &[aria-selected="true"] {
     background-color: #e4e6f1;
@@ -33,18 +23,26 @@
   }
 }
 
+.project-list-item-name {
+  flex: 1;
+  text-align: left;
+  padding: 0 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 16px;
+  height: 36px;
+  line-height: 36px;
+}
+
 .project-list-item-action-bar {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
   &:not(.always-visible) {
-    visibility: hidden;
+    display: none;
   }
 }
 
 .project-list-item:hover, .project-list-item:focus-within {
   .project-list-item-action-bar {
-    visibility: visible;
+    display: block;
   }
 }
